--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "create-editor",
-  "version": "0.0.1",
-  "description": "package for js candidate test",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon server.js"
-  },
-  "author": "jun",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.13.4",
-    "jquery": "^2.2.3",
-    "junk": "^1.0.2",
-    "multer": "^1.1.0",
-    "nodemon": "^1.9.1"
-  },
-  "devDependencies": {
-    "gulp": "^3.9.1"
-  }
+    "name": "create-editor",
+    "version": "0.0.1",
+    "description": "package for js candidate test",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon server.js"
+    },
+    "author": "jun",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.13.4",
+        "jquery": "^2.2.3",
+        "junk": "^1.0.2",
+        "multer": "^1.1.0",
+        "nodemon": "^1.9.1"
+    },
+    "devDependencies": {
+        "body-parser": "^1.17.1",
+        "gulp": "^3.9.1"
+    }
 }
