--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "angular": "^1.6.4",
     "angular-ui-router": "0.4.2",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "angular-drag-and-drop-lists": "^2.1.0"
   }
 }
