--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.13.4",
-        "jquery": "^2.2.3",
         "junk": "^1.0.2",
         "multer": "^1.1.0",
         "nodemon": "^1.9.1"
     },
     "devDependencies": {
         "body-parser": "^1.17.1",
-        "ejs": "^2.5.6",
-        "gulp": "^3.9.1"
+        "ejs": "^2.5.6"
     }
 }
